# connect-four-agent

./: .gitignore  LICENSE  README.md  app.py  main.py  pyproject.toml  requirements.txt
arena/: board.py  board_view.py  c4.py  game.py  llm.py  player.py  record.py
